Fix: Added AppCompat and cleaned AndroidManifest warnings

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,16 @@
-apply plugin: 'com.android.application'
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-android {
-    namespace 'com.example.helloworld' // ✅ Add this line (required for AGP 7+)
-    compileSdkVersion 33
+    <application
+        android:label="Hello World"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        
+        <activity android:name=".MainActivity" android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
-    defaultConfig {
-        applicationId "com.example.helloworld"
-        minSdkVersion 21
-        targetSdkVersion 33
-        versionCode 1
-        versionName "1.0"
-    }
+    </application>
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-}
-
-dependencies {
-    // No external dependencies needed for Hello World
-}
+</manifest>
